Added barcode fx, start insights and front end

--- a/mraurum/jmms/templates/master/base.html
+++ b/mraurum/jmms/templates/master/base.html
@@ -48,9 +48,9 @@
 		
 	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
 		<ul class="nav menu">
-			<li class="active"><a href="index.html"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
+			<li class="active"><a href="{% url 'sitehome' %}"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
 			<li><a href="charts.html"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Charts</a></li>
-			<li><a href="jewelleryinprocess.html"><svg class="glyph stroked pen tip"><use xlink:href="#stroked-pen-tip"/></svg> Jewellery In Process</a></li>
+			<li><a href="{% url 'progress' %}"><svg class="glyph stroked pen tip"><use xlink:href="#stroked-pen-tip"/></svg> Jewellery In Process</a></li>
 			<li><a href="/admin/"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Admin</a></li>
 			<li class="parent">
 				<a href="#">
@@ -134,11 +134,12 @@
 		</ul>
 
 	</div><!--/.sidebar-->
-    
-    {% block content %}
-    {% endblock %}
 	
-	</div>	<!--/.main-->
+    {% block content %}
+	{% endblock %}
+	
+	
+		<!--/.main-->
 
 	<script src="{% static 'bootstrap/js/jquery-1.11.1.min.js' %}"></script>
 	<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
