--- a/mraurum/jmms/templates/master/base.html
+++ b/mraurum/jmms/templates/master/base.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	{% load staticfiles %}
+{% load staticfiles %}
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Dashboard</title>
 
-<link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-<link href="{% static 'bootstrap/css/datepicker3.css' %}" rel="stylesheet">
-<link href="{% static 'bootstrap/css/styles.css' %}" rel="stylesheet">
+<link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'bootstrap/css/datepicker3.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'bootstrap/css/styles.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'bootstrap/css/bootstrap-table.css' %}" rel="stylesheet" type="text/css">
 
 <!--Icons-->
-<script src="{% static 'bootstrap/css/bootstrap.min.css' %}"></script>
+<script src="{% static 'bootstrap/js/lumino.glyphs.js' %}"></script>
 
 <!--[if lt IE 9]>
 <script src="js/html5shiv.js"></script>
@@ -30,14 +31,14 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#"><span>Lumino</span>Admin</a>
+				<a class="navbar-brand" href="/"><span>Lumino</span>Admin</a>
 				<ul class="user-menu">
 					<li class="dropdown pull-right">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> User <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
-							<li><a href="#"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Profile</a></li>
-							<li><a href="#"><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"></use></svg> Settings</a></li>
-							<li><a href="#"><svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> Logout</a></li>
+							<li><a href="/admin/auth/user/2/change/"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Profile</a></li>
+							<li><a href="/admin/auth/"><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"></use></svg> Settings</a></li>
+							<li><a href="/admin/logout/"><svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> Logout</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -49,87 +50,44 @@
 	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
 		<ul class="nav menu">
 			<li class="active"><a href="{% url 'sitehome' %}"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
-			<li><a href="charts.html"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Charts</a></li>
+			<li><a href="{% url 'charts' %}"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Charts</a></li>
 			<li><a href="{% url 'progress' %}"><svg class="glyph stroked pen tip"><use xlink:href="#stroked-pen-tip"/></svg> Jewellery In Process</a></li>
 			<li><a href="/admin/"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Admin</a></li>
 			<li class="parent">
-				<a href="#">
-					<span data-toggle="collapse" href="#sub-item-1"><svg class="glyph stroked chevron-down"><use xlink:href="#stroked-chevron-down"></use></svg></span> Place Order 
-				</a>
-				<ul class="children collapse" id="sub-item-1">
-					<li>
-						<a class="" href="placeorder_cutter.html">
-							<svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Cutter
-						</a>
-					</li>
-					<li>
-						<a class="" href="placeorder_embedder.html">
-							<svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Embedder
-						</a>
-					</li>
-					<li>
-						<a class="" href="placeorder_polisher.html">
-							<svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Polisher
-						</a>
-					</li>
-					<li>
-						<a class="" href="placeorder_verification.html">
-							<svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Verification
-						</a>
-					</li>
-				</ul>
-			</li>
-			<li class="parent">
-				<a href="#">
+				<a href="/admin/auth/user/">
 					<span data-toggle="collapse" href="#sub-item-2"><svg class="glyph stroked chevron-down"><use xlink:href="#stroked-chevron-down"></use></svg></span> Users
 				</a>
 				<ul class="children collapse" id="sub-item-2">
 					<li>
-						<a class="" href="cutter.html">
+						<a class="" href="{% url 'cutters' %}">
 							<svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Cutter
 						</a>
 					</li>
 					<li>
-						<a class="" href="embedder.html">
+						<a class="" href="{% url 'embedders' %}">
 							<svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Embedder
 						</a>
 					</li>
 					<li>
-						<a class="" href="polisher.html">
+						<a class="" href="{% url 'polishers' %}">
 							<svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Polisher
 						</a>
 					</li>
 					<li>
-						<a class="" href="supplier.html">
+						<a class="" href="{% url 'suppliers' %}">
 							<svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Supplier
 						</a>
 					</li>
 
 					<li>
-						<a class="" href="seller.html">
+						<a class="" href="{% url 'sellers' %}">
 							<svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Seller
 						</a>
 					</li>
 				</ul>
 			</li>
-			<li class="parent">
-				<a href="#">
-					<span data-toggle="collapse" href="#sub-item-3"><svg class="glyph stroked chevron-down"><use xlink:href="#stroked-chevron-down"></use></svg></span> Stock 
-				</a>
-				<ul class="children collapse" id="sub-item-3">
-					<li>
-						<a class="" href="currentstock.html">
-							<svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Current Stock
-						</a>
-					</li>
-					<li>
-						<a class="" href="addstock.html">
-							<svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Add Stock
-						</a>
-					</li>
-					
-				</ul>
-			</li>
+
+			<li><a href="{% url 'stock' %}"><svg class="glyph stroked chevron-down"><use xlink:href="#stroked-chevron-down"></use></svg></span> Stock </a></li>
 			<li role="presentation" class="divider"></li>
 		</ul>
 
