--- a/mraurum/jmms/templates/progress.html
+++ b/mraurum/jmms/templates/progress.html
@@ -4,44 +4,32 @@
 	<div class="row">
 		<ol class="breadcrumb">
 			<li><a href="#"><svg class="glyph stroked home"><use xlink:href="#stroked-home"></use></svg></a></li>
-			<li class="active">Icons</li>
 		</ol>
 	</div><!--/.row-->
 	
 	<div class="row">
 		<div class="col-lg-12">
-			<center><h2 class="page-header">Seller Details</h2></center>
+			<h1 class="page-header">Tables</h1>
 		</div>
 	</div><!--/.row-->
-			
 	
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-6">
 			<div class="panel panel-default">
-				
+				<div class="panel-heading">Basic Table</div>
 				<div class="panel-body">
-					<table class="table table-responsive table-bordered">
+					<table data-toggle="table" data-url="tables/data2.json" >
 						<thead>
 						<tr>
-							<th>Sr. No.</th>
-							<th>Seller Name</th>
-							<th>Orders Processed Till Date</th>
+							<th data-field="id" data-align="right">Item ID</th>
+							<th data-field="name">Item Name</th>
+							<th data-field="price">Item Price</th>
 						</tr>
 						</thead>
-						<tbody>
-							{% for items in seller %}
-							<tr>
-								<td>{{ forloop.counter }}</td>
-								<td>{{ items.seller_id__username }}</td>
-								<td>{{ items.total_supply }}</td>
-							</tr>
-							{% endfor %}
-						</tbody>
 					</table>
 				</div>
 			</div>
 		</div>
 	</div><!--/.row-->	
-	
 </div><!--/.main-->
 {% endblock %}
