--- a/mraurum/jmms/templates/master/base.html
+++ b/mraurum/jmms/templates/master/base.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Dashboard</title>
+<title>Mr Aurum</title>
 
 <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
 <link href="{% static 'bootstrap/css/datepicker3.css' %}" rel="stylesheet" type="text/css">
@@ -31,7 +31,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/"><span>Lumino</span>Admin</a>
+				<a class="navbar-brand" href="/"><span>MR</span>AURUM</a>
 				<ul class="user-menu">
 					<li class="dropdown pull-right">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> User <span class="caret"></span></a>
@@ -49,10 +49,10 @@
 		
 	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
 		<ul class="nav menu">
-			<li class="active"><a href="{% url 'sitehome' %}"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
-			<li><a href="{% url 'charts' %}"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Charts</a></li>
-			<li><a href="{% url 'progress' %}"><svg class="glyph stroked pen tip"><use xlink:href="#stroked-pen-tip"/></svg> Jewellery In Process</a></li>
-			<li><a href="/admin/"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Admin</a></li>
+			<li class="{% if active_tab == 'dashboard' %}active{% endif %}"><a href="{% url 'sitehome' %}"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
+			<li class="{% if active_tab == 'charts' %}active{% endif %}"><a href="{% url 'charts' %}"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Charts</a></li>
+			<li class="{% if active_tab == 'jinprocess' %}active{% endif %}"><a href="{% url 'progress' %}"><svg class="glyph stroked pen tip"><use xlink:href="#stroked-pen-tip"/></svg> Jewellery In Process</a></li>
+			<li class="{% if active_tab == 'admin' %}active{% endif %}"><a href="/admin/"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Admin</a></li>
 			<li class="parent">
 				<a href="/admin/auth/user/">
 					<span data-toggle="collapse" href="#sub-item-2"><svg class="glyph stroked chevron-down"><use xlink:href="#stroked-chevron-down"></use></svg></span> Users
@@ -87,7 +87,7 @@
 				</ul>
 			</li>
 
-			<li><a href="{% url 'stock' %}"><svg class="glyph stroked chevron-down"><use xlink:href="#stroked-chevron-down"></use></svg></span> Stock </a></li>
+			<li class="{% if active_tab == 'stock' %}active{% endif %}"><a href="{% url 'stock' %}"><svg class="glyph stroked chevron-down"><use xlink:href="#stroked-chevron-down"></use></svg></span> Stock </a></li>
 			<li role="presentation" class="divider"></li>
 		</ul>
 
