--- a/mraurum/jmms/templates/master/base.html
+++ b/mraurum/jmms/templates/master/base.html
@@ -56,7 +56,7 @@
 			<li class="{% if active_tab == 'admin' %}active{% endif %}"><a href="/admin/"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Admin</a></li>
 			<li class="parent">
 				<a href="/admin/auth/user/">
-					<span data-toggle="collapse" href="#sub-item-2"><svg class="glyph stroked chevron-down"><use xlink:href="#stroked-chevron-down"></use></svg></span> Users
+					<span data-toggle="collapse" href="#sub-item-2"><svg class="glyph stroked chevron-down"><use xlink:href="#stroked-chevron-down"></use></svg></span> Orders
 				</a>
 				<ul class="children collapse" id="sub-item-2">
 					<li>
