--- a/mraurum/jmms/templates/currentstock.html
+++ b/mraurum/jmms/templates/currentstock.html
@@ -1,4 +1,5 @@
 {% extends 'master/base.html' %}
+{% load mathfilters %}
 {% block content %}		
 <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">			
 	<div class="row">
@@ -41,7 +42,7 @@
 								<td>{{ items.material_type_id__material_current_price }}</td>
 								<td>{{ items.material_type_id__material_unit }}</td>
 								<td>{{ items.total_supply }}</td>
-								<td>{{ items.total_price }}</td>
+								<td>{{ items.material_type_id__material_current_price|mul:items.total_supply |div:items.material_type_id__material_unit }}</td>
 							</tr>
 							{% endfor %}
 						</tbody>
