--- a/mraurum/jmms/templates/index.html
+++ b/mraurum/jmms/templates/index.html
@@ -192,7 +192,7 @@
 
 		<div class="row">
 			<div class="col-lg-12">
-				<h2 class="page-header">Users</h2>
+				<h2 class="page-header">Users and Orders</h2>
 			</div>
 		</div><!--/.row-->
 		
